--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/jquery": "^3.5.32",
     "@xenova/transformers": "^2.17.2",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
